# mage_duckdb_pipeline

./: .gitignore  README.md  dont_forget.sh  metadata.yaml  pyproject.toml  requirements.txt
communication/: _quarto.yml  data_pipeline_mage.html  data_pipeline_mage.qmd
custom/: check_db.py  check_local_db.py  db_size_assessment.py  get_schema_from_metadata.py  gx_quality_check.py
data/: data_engineer_us_30Dec2024.csv  infor.txt
data_exporters/: create_duckdb_table.py  export_polars_to_duckdb.py  export_to_duckdb.py
data_loaders/: data_for_testing.py  get_dataset_total_rows.py  get_schema_from_metadata.py  pull_data_from_socrata.py  soda_records_per_year.py
docs/: data_pipeline_mage.html  index.html  search.json
pipelines/socrata_iowa_liquor_pipeline/: metadata.yaml
pipelines/socrata_pipeline/: metadata.yaml
transformers/: categorize_product.py  product_transformations.py  sales_and_price_related_metrics.py  sales_metrics.py  time_based_features.py  volume_based_features.py
